Added model #2 Decision-tree and cross-validations

--- a/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
+++ b/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
@@ -1473,6 +1473,115 @@
     "## in the model. lets try the first option.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor()"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(X_train_cleaned , Y_train)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_predictions = tree_reg.predict(X_train_cleaned)\n",
+    "tree_mse = mean_squared_error(Y_train ,tree_predictions)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "\n",
+    "tree_rmse\n",
+    "\n",
+    "## A7eh (egyptian word that mean how on earth this could be possible) how can the model have a 0.0 error , well it seems that we have overfitting here\n",
+    "\n",
+    "## we use validation set for this , we will use k-folds with 10 bukets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## kfolds \n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "##note scorng in folds is a utulity function not a cost so instead of mean squared we use neg mean square\n",
+    "scores = cross_val_score(tree_reg , X_train_cleaned , Y_train , scoring=\"neg_mean_squared_error\", cv = 10)\n",
+    "\n",
+    "tree_rmse_scores = np.sqrt(-scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------tree Scores--------------------\n",
+      "Raw_scores: [69423.44657288 66292.26283866 70024.99392871 68141.87916651\n",
+      " 70678.43421721 74319.76100607 71581.13084352 72205.24140712\n",
+      " 77675.99370062 68937.59302945]\n",
+      "mean_scores 70928.07367107323\n",
+      "Standard_deviation 3089.5472072549633\n",
+      "-----------Linear Regression scores--------------------\n",
+      "Raw_scores: [66782.73843989 66960.118071   70347.95244419 74739.57052552\n",
+      " 68031.13388938 71193.84183426 64969.63056405 68281.61137997\n",
+      " 71552.91566558 67665.10082067]\n",
+      "mean_scores 69052.46136345083\n",
+      "Standard_deviation 2731.674001798346\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_scores(scores):\n",
+    "    print(\"Raw_scores:\",scores)\n",
+    "    print(\"mean_scores\",scores.mean())\n",
+    "    print(\"Standard_deviation\",scores.std())\n",
+    "\n",
+    "print(\"-----------tree Scores--------------------\")\n",
+    "display_scores(tree_rmse_scores)\n",
+    "## the std helps us to get an idea on how precise those scores are. but cross validation is not always possible sometimes the data is too big\n",
+    "## that performing this itirative approach costs a lot of computational power.\n",
+    "## well looking at this we now know that the model was greatly overfitted\n",
+    "print(\"-----------Linear Regression scores--------------------\")\n",
+    "lin_reg_scores = cross_val_score(linear_reg, X_train_cleaned, Y_train, scoring =\"neg_mean_squared_error\" , cv =10)\n",
+    "lin_reg_rmse_scores = np.sqrt(-lin_reg_scores)\n",
+    "\n",
+    "display_scores(lin_reg_rmse_scores)\n",
+    "## it actually performed worse compared to the linear regression"
+   ]
   }
  ],
  "metadata": {
