Added model #3 Random Forest

--- a/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
+++ b/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
@@ -1582,6 +1582,58 @@
     "display_scores(lin_reg_rmse_scores)\n",
     "## it actually performed worse compared to the linear regression"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18807.56992233163"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Ensemble learning is usally a great way to boost your machine learning algorithms and for problems like this one\n",
+    "## a regression model would be the ultimate modification to a bad-performing tree.\n",
+    "## surly takes more time but gives way better results.\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "rf_reg = RandomForestRegressor()\n",
+    "rf_reg.fit(X_train_cleaned,Y_train)\n",
+    "rf_reg_predictions= rf_reg.predict(X_train_cleaned)\n",
+    "rf_mse = mean_squared_error(Y_train, rf_reg_predictions)\n",
+    "rf_rmse = np.sqrt(rf_mse)\n",
+    "rf_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw_scores: [49533.84168585 47709.90773115 49507.86150704 52142.98185002\n",
+      " 49617.5865172  53294.59513868 48607.67193664 47730.76924907\n",
+      " 53149.24207794 50260.13083959]\n",
+      "mean_scores 50155.458853317985\n",
+      "Standard_deviation 1952.6571558918092\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_scores = cross_val_score(rf_reg, X_train_cleaned, Y_train, scoring=\"neg_mean_squared_error\" , cv=10)\n",
+    "rf_rmse_scores= np.sqrt(-rf_scores)\n",
+    "display_scores(rf_rmse_scores)"
+   ]
   }
  ],
  "metadata": {
