Hyper parameter tuning for the RF model

--- a/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
+++ b/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
@@ -1634,6 +1634,91 @@
     "rf_rmse_scores= np.sqrt(-rf_scores)\n",
     "display_scores(rf_rmse_scores)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(),\n",
+       "             param_grid=[{'max_features': [2, 4, 6, 8],\n",
+       "                          'n_estimators': [3, 10, 30]},\n",
+       "                         {'bootstrap': [False], 'max_features': [2, 3, 4],\n",
+       "                          'n_estimators': [3, 10]}],\n",
+       "             return_train_score=True, scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## well this is better than the previous models but certainly it is also overfitterd\n",
+    "## at this stage you may want to explore other models svm or neural networks but for now I will jump into the hyperparameters tuning for the\n",
+    "## reandom forest model those are n_estimators which are the number of tress we have and max feaetures in every tree( usally roof features)\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV \n",
+    "\n",
+    "param_grid = [\n",
+    "    {\"n_estimators\" : [3, 10 , 30] ,\"max_features\":[2,4,6,8] },\n",
+    "    {\"bootstrap\": [False] , \"n_estimators\":[3, 10], \"max_features\":[2, 3, 4]}\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "\n",
+    "grid_search = GridSearchCV( forest_reg, param_grid, cv=5, scoring=\"neg_mean_squared_error\" , return_train_score=True)\n",
+    "\n",
+    "grid_search.fit(X_train_cleaned,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63615.91001234334 {'max_features': 2, 'n_estimators': 3}\n",
+      "55276.32447163434 {'max_features': 2, 'n_estimators': 10}\n",
+      "52648.704160333924 {'max_features': 2, 'n_estimators': 30}\n",
+      "59919.55446389654 {'max_features': 4, 'n_estimators': 3}\n",
+      "52879.547292382544 {'max_features': 4, 'n_estimators': 10}\n",
+      "50736.947416999064 {'max_features': 4, 'n_estimators': 30}\n",
+      "59788.37352507241 {'max_features': 6, 'n_estimators': 3}\n",
+      "52101.27838287292 {'max_features': 6, 'n_estimators': 10}\n",
+      "50178.803484072676 {'max_features': 6, 'n_estimators': 30}\n",
+      "58409.393046266305 {'max_features': 8, 'n_estimators': 3}\n",
+      "52325.69985427611 {'max_features': 8, 'n_estimators': 10}\n",
+      "50172.79978798056 {'max_features': 8, 'n_estimators': 30}\n",
+      "61280.88902940512 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
+      "54648.83110280835 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
+      "61064.177180672705 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
+      "52437.698173881996 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
+      "58293.80143282092 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
+      "51885.00686757381 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid_search.best_params_\n",
+    "## those are alreaady the highest possible value so you may need to modify and try it on larger amount of trees\n",
+    "\n",
+    "## we vcan view the best model or all the socores\n",
+    "\n",
+    "grid_search.best_estimator_\n",
+    "\n",
+    "## all the scores , recall that zip sort of dictionarize two lists , not exactly a dictionary data structure but you can think of it as an \n",
+    "## list of pairs\n",
+    "cvres = grid_search.cv_results_\n",
+    "for mean_score , params in zip(cvres['mean_test_score'], cvres['params']):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ]
   }
  ],
  "metadata": {
