Model's Performance on test_set

--- a/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
+++ b/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
@@ -1719,6 +1719,96 @@
     "for mean_score , params in zip(cvres['mean_test_score'], cvres['params']):\n",
     "    print(np.sqrt(-mean_score), params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.39585084539937293, 'median_income'),\n",
+       " (0.14952798000674392, 'INLAND'),\n",
+       " (0.11171719668814445, 'pop_per_house'),\n",
+       " (0.06439878556048076, 'longitude'),\n",
+       " (0.06411024164390906, 'latitude'),\n",
+       " (0.04984820524923388, 'rooms_per_house'),\n",
+       " (0.04521412392419513, 'housing_median_age'),\n",
+       " (0.04474147913195991, 'bedrooms_per_rooms'),\n",
+       " (0.01561610724608435, 'total_bedrooms'),\n",
+       " (0.015381812313088583, 'total_rooms'),\n",
+       " (0.015208184117643396, 'population'),\n",
+       " (0.014270869051766725, 'households'),\n",
+       " (0.008260028934757753, '<1H OCEAN'),\n",
+       " (0.003929725886170521, 'NEAR OCEAN'),\n",
+       " (0.00187192966605087, 'NEAR BAY'),\n",
+       " (5.2485180397660646e-05, 'ISLAND')]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Random forests allows you to explore the correlation between each feature and the target attribute\n",
+    "feature_importance = grid_search.best_estimator_.feature_importances_\n",
+    "extra_attributes=[\"rooms_per_house\", \"pop_per_house\",\"bedrooms_per_rooms\"]\n",
+    "cat_encoder = full_pipeline.named_transformers_[\"cat\"]\n",
+    "cat_one_hot_added = list(cat_encoder.categories_[0])\n",
+    "all_attributes = num_attributes + extra_attributes + cat_one_hot_added\n",
+    "\n",
+    "sorted(zip(feature_importance, all_attributes),reverse =True)\n",
+    "## it is clear that some of the features are not really very important particularly the ones from the one hot encoding of the ocean proximity \n",
+    "## categorical attribute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model = grid_search.best_estimator_\n",
+    "\n",
+    "X_test = test_setStra.drop(\"median_house_value\" , axis = 1)\n",
+    "Y_test = test_setStra[\"median_house_value\"].copy()\n",
+    "\n",
+    "X_test_ready = full_pipeline.transform(X_test)\n",
+    "final_predictions = final_model.predict(X_test_ready)\n",
+    "\n",
+    "mse_on_test = mean_squared_error( Y_test  ,  final_predictions  )\n",
+    "\n",
+    "final_rmse = np.sqrt(mse_on_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([45693.10258784, 49683.12226102])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## now we have to make sure that this is great enough so to have a sense for the numbers let us calculate the 95% confidence interval\n",
+    "\n",
+    "from scipy import stats\n",
+    "\n",
+    "confidence = 0.95\n",
+    "\n",
+    "sq_error = (final_predictions - Y_test) ** 2 \n",
+    "np.sqrt( stats.t.interval(confidence, len(sq_error)-1 , loc = sq_error.mean() , scale = stats.sem(sq_error)))"
+   ]
   }
  ],
  "metadata": {
